World generation completed! Ores just need tuned a little bit